Adjusted positions, height, and width for the work containers and content divs. Now I can align the content without issue. Added a box sizing border box to the main work container so the small containers do not exceed their parent div.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -160,20 +160,43 @@ table {
   max-width: 800px; }
 
 .WorkContainers {
+  box-sizing: border-box;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  align-items: center;
   width: 100%;
   height: 0;
   padding-bottom: 100%;
+  overflow: hidden;
   border: 2px dotted red;
   transition: background-color ease-out 0.5s; }
   .WorkContainers:hover {
     background-color: pink;
     transition: background-color ease-in 0.5s; }
 
+.Content {
+  position: absolute;
+  height: 80%;
+  width: 90%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr; }
+
 .WorkTitle {
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  /*text-align: center;*/
+  border: 1px solid purple;
+  box-sizing: border-box;
+  align-self: start; }
 
 .WorkDescription {
-  font-size: 0.83rem; }
+  font-size: 0.83rem;
+  /*text-align: center;*/
+  border: 1px dashed green;
+  box-sizing: border-box;
+  align-self: start; }
 
 #Resume {
   width: 100%;
