--- a/client/src/scss/partials/work2.scss
+++ b/client/src/scss/partials/work2.scss
@@ -14,9 +14,16 @@
 }
 
 .WorkContainers {
+	box-sizing: border-box;
+	position: relative;
+	display: grid;
+	grid-template-columns: 1fr;
+	justify-items: center;
+	align-items: center;
 	width: 100%;
 	height: 0;
 	padding-bottom: 100%;
+	overflow: hidden;
 	border: 2px dotted red;
 	transition: background-color ease-out 0.5s;
 
@@ -26,10 +33,27 @@
 	}
 }
 
+.Content {
+	position: absolute;
+	height: 80%;
+	width: 90%;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr 1fr;
+}
+
 .WorkTitle {
 	font-size: 1.5rem;
+	/*text-align: center;*/
+	border: 1px solid purple;
+	box-sizing: border-box;
+	align-self: start;
 }
 
 .WorkDescription {
 	font-size: 0.83rem;
+	/*text-align: center;*/
+	border: 1px dashed green;
+	box-sizing: border-box;
+	align-self: start;
 }
